2008-08-14  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/m_msg.c, src/libmunge/encode.c, src/munged/dec.c,
	  src/munged/enc.c, src/munged/munged.c: Removed unnecessary header
	  includes.

	* src/libmissing/inet_ntop.h, src/munged/conf.c, src/munge/unmunge.c:
	  Moved <arpa/inet.h> header include into "inet_ntop.h" #if/#else.

2008-07-01  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with autoconf-2.61, automake-1.10.

	* configure.ac, config/config.h.in,
	  src/libcommon/munge_defs.h, src/libmunge/enum.c,
	  src/libmunge/munge.h, src/libmunge/munge_ctx.3.in, src/munged/md.c:
	  Added support for MUNGE_MAC_SHA512.

	* doc/credential_v3_format.txt: Added additional details to the steps
	  in which credentials are encoded.

2008-01-30  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/path.h: Added missing #include.

	* src/munged/path.c (path_dirname): Changed behavior to return EINVAL
	  error if src is NULL.

2008-01-29  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/ctx.c (munge_ctx_create): Fixed bug where
	  ctx->error_str could be read before it was initialized.

	* src/libcommon/str.c, src/libcommon/str.h (strcatf):
	  Fixed bug where strcatf()'s size_t return type prevented the error
	  code of -1 from being returned to the caller.
	* src/munged/crypto.c (openssl_log_msg):
	  Specified void cast to discard return value from strcatf().

2008-01-28  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_hash_create, _gids_user_to_uid):
	  Fixed bug where _gids_user_to_uid() returned a signed int identifying
	  the uid (on success) or -1 (on error).  This value was first assigned
	  directly to an unsigned uid_t and then tested for error.  But since
	  the var was unsigned, the test would always eval to true.

2008-01-09  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright date range.

2007-10-10  Chris Dunlap  <cdunlap@llnl.gov>

	* DISCLAIMER.LLNS, DISCLAIMER.UC: Updated.

2007-10-08  Chris Dunlap  <cdunlap@llnl.gov>
