@@ -1,3 +1,8 @@
+2008-12-10  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/munged/gids.c (_gids_update): Restructured in order for the gids
+	  mutex to be locked/unlocked only once instead of twice per call.
+
 2008-08-14  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/libcommon/m_msg.c, src/libmunge/encode.c, src/munged/dec.c,
